# algorithmic-filmmaking

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  compound-engineering.local.md  main.py  pyproject.toml  requirements-core-macos.txt  requirements-core.txt  requirements-optional.txt  requirements.txt
assets/: icon.icns
cli/: __init__.py  main.py
core/: __init__.py  analysis_availability.py  analysis_dependencies.py  analysis_operations.py  analysis_target.py  app_version.py  audio_formats.py  auth_errors.py  binary_resolver.py  bundled_models.py  chat_export.py  chat_tools.py  codex_client.py  constants.py  cost_estimates.py  dataset_export.py  dependency_manager.py  downloader.py  edl_export.py  errors.py  feature_registry.py  ffmpeg.py  film_glossary.py  filter_state.py  gui_state.py  intention_workflow.py  internet_archive_api.py  llm_client.py  macos_updater.py  model_bundle_manifest.json  package_manifest.json  paths.py  plan_controller.py  project.py  project_export.py  quota_estimator.py  runtime_smoke.py  scene_detect.py  scene_report.py  sequence_export.py  (+12 more)
docs/: linux-distribution-guide.md  macos-vm-testing.md  mcp-claude-desktop-setup.md  releases.md  windows-trusted-signing.md
models/: __init__.py  audio_source.py  cinematography.py  clip.py  frame.py  plan.py  sequence.py  sequence_analysis.py
packaging/: build_support.py
prototypes/: karaoke_text_detector.py
scene_ripper_mcp/: __init__.py  auth_snapshot.py  security.py  server.py
scripts/: compare_shot_classifiers.py  compare_vlm_providers.py  download_mixkit_clips.sh  download_test_clips.py  transcribe_whisper.py
tests/: __init__.py  conftest.py  test_agent_native_critical.py  test_algorithm_config.py  test_alignment.py  test_analysis_availability.py  test_analysis_dependencies.py  test_analysis_dependency_gates.py  test_analysis_operations.py  test_analysis_picker_dialog.py  test_analysis_pipeline.py  test_analysis_target.py  test_analysis_workers.py  test_analyze_tab_auto_include.py  test_analyze_tab_clip_sync.py  test_app_version.py  test_auth_errors.py  (+150 more)
(+509 files in other folders)
